[package]
name = "rsv"
version = "1.3.3"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
description = "The runit sv command rewritten in rust with additional features"
license = "GPL-3.0"
readme = "README.md"
repository="https://github.com/JojiiOfficial/rsv"

[package.metadata.arch]
arch = ["x86_64"]
provides = ["rsv"]

[dependencies]
sys-info = "0.8.0"
sysinfo = "0.16.1"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_yaml = "0.8.16"
sudo = { version = "0.6.0", optional = true }
clap = "3.0.0-rc.8"
clap_generate = "3.0.0-rc.8"

[features]
default = ["auto_sudo"]
auto_sudo = ["sudo"]
