[package]
name = "config"
version = "0.1.0"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sysinfo = "0.3.19"
